package _2_结构型模式._2_桥接模式_Bridge;

public interface Engine {
    void start();
}